RESOLVED FIXED270800
PresentationContextIOSurface::getCurrentTexture should return an invalid texture instead of null
https://bugs.webkit.org/show_bug.cgi?id=270800
Summary PresentationContextIOSurface::getCurrentTexture should return an invalid text...
Alex Christensen
Reported 2024-03-11 09:19:56 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-03-11 09:20:13 PDT
Alex Christensen
Comment 2 2024-03-11 09:21:27 PDT
EWS
Comment 3 2024-03-11 11:11:14 PDT
Committed 275912@main (b5d883c007df): <https://commits.webkit.org/275912@main> Reviewed commits have been landed. Closing PR #25725 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.