PresentationContextIOSurface::getCurrentTexture should return an invalid texture instead of null https://bugs.webkit.org/show_bug.cgi?id=270800 rdar://124392010

Reviewed by Mike Wyrzykowski.

This, along with https://github.com/WebKit/WebKit/pull/25636 is necessary to fix rdar://124213314

* Source/WebGPU/WebGPU/PresentationContextIOSurface.h:
* Source/WebGPU/WebGPU/PresentationContextIOSurface.mm:
(WebGPU::PresentationContextIOSurface::configure):
* Source/WebKit/GPUProcess/graphics/WebGPU/RemotePresentationContext.cpp:
(WebKit::RemotePresentationContext::getCurrentTexture):

Canonical link: https://commits.webkit.org/275912@main